# EMP

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sh  emp.cpp  makefile
.github/workflows/: release.yml
common/: constants.hpp
src/: argument.rs  constants.h  constants.rs  decode.rs  emp.cpp  encode.cpp  encode.h  encode.rs  errors.rs  from_string.cpp  from_string.h  lib.rs  main.rs  structure.h  to_string.cpp  to_string.h  value.rs
src/decode/: json.rs  macros.rs
src/encode/: json.rs
src/value/: json.rs  parse.rs
src/value/parse/: macros.rs
tests/: encode.emp  encode.json  encode.nbt
types/: display.cpp  encode.cpp  types.cpp  types.hpp
